Fixing checkbox alignment bug.

--- a/_sass/_form-elements.scss
+++ b/_sass/_form-elements.scss
@@ -120,6 +120,7 @@ input:-webkit-autofill:active {
     
     &.checkboxes-wrapper {
         margin-left: -8px;
+        padding-left: 8px;
     }
     &.error {
         box-shadow: 0 0 0 8px $bga-red-fail-mid;
@@ -242,7 +243,7 @@ textarea {
     padding: 0 ;
     display: flex;
     flex-wrap: nowrap;
-    margin: 0 0 4px 0;
+    margin: 0 0 4px -8px;
     
     label,
     .label {
@@ -334,10 +335,6 @@ textarea {
 }
 .form-element-wrapper.error {
    
-    &.checkboxes-wrapper {
-        //padding: 0px 0px 0px 8px;
-       // margin: 0px 0 0 -8px;
-    }
     .checkboxes {
         [type=checkbox] {
             border: solid 1px $bga-blue-black-dark;
